update: final code.

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,13 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+.app {
+  background-color: #212121;
+  height: 100vh;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
